# mini_cc

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
assets/: auto-mode-rules.json
src/mini_cc/: __init__.py  __main__.py  agent.py  autonomy.py  backend.py  frontmatter.py  mcp_client.py  memory.py  prompt.py  session.py  skills.py  subagent.py  tools.py  ui.py
