[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mini-cc"
version = "1.0.0"
description = "A minimal coding agent inspired by Claude Code, built from scratch"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "rich>=13.0.0",
]

[project.scripts]
mini-cc = "mini_cc.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["mini_cc*"]

[tool.setuptools.package-data]
mini_cc = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
